[workspace]
members = [
    "crates/lunco-core",
    "crates/lunco-hash",
    "crates/lunco-precompute",
    "crates/lunco-time",
    "crates/lunco-fsw",
    "crates/lunco-behavior",
    "crates/lunco-controller",
    "crates/lunco-autopilot",
    "crates/lunco-avatar",
    "crates/luncosim",
    "crates/lunco-sandbox",
    "crates/lunco-sandbox-server",
    "crates/lunco-telemetry",
    "crates/lunco-celestial",
    "crates/lunco-celestial-ephemeris",
    "crates/lunco-hardware",
    "crates/lunco-mobility",
    "crates/lunco-robotics",
    "crates/lunco-modelica",
    "crates/lunco-usd-avian",
    "crates/lunco-usd-bevy",
    "crates/lunco-usd-sim",
    "crates/lunco-usd-terrain",
    "crates/lunco-usd",
    "crates/lunco-sandbox-edit",
    "crates/lunco-scene-commands",
    "crates/lunco-ui",
    "crates/lunco-assets",
    "crates/lunco-materials",
    "crates/lunco-networking",
    "crates/lunco-command-macro",
    "crates/lunco-terrain-globe",
    "crates/lunco-terrain-core",
    "crates/lunco-api",
    "crates/lunco-cosim",
    "crates/lunco-environment",
    "crates/lunco-doc",
    "crates/lunco-doc-bevy",
    "crates/lunco-twin",
    "crates/lunco-twin-journal",
    "crates/lunco-tools",
    "crates/lunco-tools-rhai",
    "crates/lunco-tools-bevy",
    "crates/lunco-hooks",
    "crates/lunco-hooks-rhai",
    "crates/lunco-workbench",
    "crates/lunco-web",
    "crates/lunco-scripting",
    "crates/lunco-signal",
    "crates/lunco-viz",
    "crates/lunco-canvas",
    "crates/lunco-theme",
    "crates/lunco-storage",
    "crates/lunco-workspace",
    "crates/lunco-settings",
    "crates/lunco-experiments",
    "crates/lunco-render",
    "crates/lunco-render-bevy",
    "crates/lunco-obstacle-field",
    "crates/lunco-worker-transport",
    "crates/lunco-terrain-bake",
    "crates/lunco-terrain-surface",
    "crates/lunco-tutorial",
    # Doc generator. A workspace member so `cargo clippy --workspace` /
    # `cargo test --workspace` actually cover it — it used to be its own
    # standalone workspace and was never built by anything.
    "tools/gen-command-docs"
]
# Bare `cargo build`/`check`/`test` (no `-p`/`--workspace`) operates on just the
# two app crates and their dependency closure. This skips workspace members that
# no binary reaches — the feature-gated lunco-networking — so default builds don't
# compile dead weight. Use `--workspace` to include everything (e.g. CI lint/test
# sweeps). (`lunco-telemetry` used to be listed here as unreached; it is now wired into
# lunco-sandbox, which is what made `SubscribeTelemetry` able to deliver at all.)
#
# `lunco-sandbox-server` is intentionally NOT here — for LEANNESS, not
# correctness: built via `-p lunco-sandbox-server`, Cargo resolves
# `lunco-sandbox` WITHOUT `ui`, so the GUI/winit/egui stack isn't linked. (A
# bare/`--workspace` build unifies `ui` on via the GUI `sandbox` bin, making the
# server binary heavier — but it STILL runs headless: the bin calls
# `lunco_sandbox::run_headless()`, which forces the windowless path regardless of
# the linked `ui` feature.) `cargo run -p lunco-sandbox-server`.
default-members = [
    "crates/luncosim",
    "crates/lunco-sandbox",
    "crates/lunco-modelica",
]
resolver = "2"

[patch.crates-io]
# scnr2 patch removed — rumoca main uses scnr2 0.3.3 and
# parol_runtime 4.2 which resolve correctly without overrides.

# openusd consumed from the `main` branch of our fork github.com/LunCoSim/openusd
# (which tracks github.com/mxpv/openusd as upstream) instead of the crates.io
# 0.5.0 release. main adds the authoring/journaling features Phase C needs — the
# `Diff`/`Edit` API (add_sink/extract_diff/apply_diff, usd/diff.rs), the
# `usd::editor` module, value-resolution/relocates/PathTable fixes, and our
# `usd::evaluate` export — while still reporting version 0.5.0 (satisfies the
# `=0.5.0` requirement below). We consume the canonical git version rather than a
# local checkout; local patches land on the fork's main, then `cargo update -p openusd`.
# To develop against a local checkout, point this at `../openusd` — but land the
# change on the fork's `main` before committing, or nobody else can build.
#
# Fork-only API we depend on (beyond the authoring/journaling features above):
# `shade::MaterialBindingAPI::on()` — a public constructor that wraps ANY prim
# (C++ ctor semantics). `::get()` requires the schema to be applied, but bindings
# INHERIT, so the prim we query (a mesh inside a rover) authors none; resolving
# through `::get()` would silently drop every inherited binding. This is what lets
# `resolve_bound_material` (lunco-usd-bevy) delegate to openusd's spec
# implementation instead of re-deriving USD's binding rules by hand.
openusd = { git = "https://github.com/LunCoSim/openusd", branch = "main" }

# transform-gizmo: NO upstream ref has bevy 0.19 AND egui 0.35 together — the
# bevy-0.19 port (mitchty/transform-gizmo@d95d069) is on egui 0.34, and the
# egui-0.35 PRs (transform-gizmo#109/#110) are still on bevy 0.18. Our
# LunCoSim/mitchty-transform-gizmo `bevy-0.19-egui-0.35` branch is mitchty's
# bevy-0.19 base + the egui 0.34→0.35 bump (source unchanged — cf. #109 is
# Cargo.toml-only).
# TODO(deps): drop this git pin for a crates.io release once upstream
# transform-gizmo ships bevy-0.19 + egui-0.35 together (tracking #109/#110).
transform-gizmo-bevy = { git = "https://github.com/LunCoSim/mitchty-transform-gizmo", rev = "51abe35ee39655b0b68c6b7727939fde7cabd725" }

# [patch."https://github.com/LunCoSim/openusd"]
# openusd = { path = "../openusd" }

# Rumoca consumed from the `main` branch of LunCoSim/rumoca (see
# [workspace.dependencies]). The fixes are merged into that `main`, so we
# consume the canonical git version rather than a local checkout.
# To develop against a local rumoca checkout, uncomment the [patch] block
# and point it at `../rumoca`.
#
# [patch."https://github.com/LunCoSim/rumoca"]
# rumoca-ir-ast      = { path = "../rumoca/crates/rumoca-ir-ast" }
# rumoca-phase-parse = { path = "../rumoca/crates/rumoca-phase-parse" }
# rumoca-compile     = { path = "../rumoca/crates/rumoca-compile" }
# rumoca-sim         = { path = "../rumoca/crates/rumoca-sim" }
# rumoca-tool-fmt    = { path = "../rumoca/crates/rumoca-tool-fmt" }
# rumoca-tool-lint   = { path = "../rumoca/crates/rumoca-tool-lint" }

[workspace.package]
description = "Initialize multi-crate workspace architecture for vessel control simulation"

[workspace.dependencies]
# Slim Bevy: drop everything Modelica/rover workbench provably doesn't
# use. Defaults pull bevy_audio/vorbis (no audio in the apps),
# bevy_text/bevy_ui*/bevy_sprite* (egui replaces UI + 2D),
# bevy_animation/bevy_gizmos/bevy_gilrs/sysinfo_plugin (unused on
# either binary). Each enabled feature is documented inline so we
# don't drift.
#
# If a build break surfaces something that was silently relying on a
# default-on feature, add it here with a `# used by …` comment rather
# than re-enabling `default` (which un-strips the lot).
bevy = { version = "0.19.0", default-features = false, features = [
    # ── 2D / UI-only core. Anything 3D-shaped (PBR, GLTF, scenes,
    # meshes, post-processing, mesh picking) is *not* in this list —
    # crates that need 3D opt in via their own Cargo.toml so the
    # Lunica (LunCoSim Modelica Workbench) web binary doesn't carry them. See
    # `crates/lunco-sandbox/Cargo.toml` for the opt-in pattern.
    # SUBSTRATE ONLY (ECS / app / log / state / color — no GPU, window, winit,
    # egui). This baseline reaches every `bevy = { workspace = true }` crate, so
    # render-free crates (lunco-core, lunco-cosim, lunco-networking, …) and the
    # `--no-ui` server binary do NOT transitively link bevy_render / bevy_winit /
    # wayland. Render/window/winit are opted into by the consumer:
    #   - render crates add `features = ["bevy_pbr", …]` (pulls bevy_render);
    #   - bevy_egui pulls bevy_render + bevy_window itself, so egui crates self-heal;
    #   - GUI BINARIES add the windowing backend (bevy_winit/wayland/x11/bevy_window)
    #     via their own bevy feature list.
    "bevy_log",                    # info!/warn!/error! macros workspace-wide
    "bevy_state",                  # state machine (some panels)
    "bevy_color",                  # Color / ClearColor (ECS-level, no GPU)
    "bevy_input_focus",            # focus tracking (ECS-level)
    "multi_threaded",              # task pools (AsyncCompute/Io)
    # NOTE: `trace_tracy` is intentionally NOT in the workspace default features
    # because tracy-client-sys requires a C++ compile that doesn't work
    # targeting wasm32-unknown-unknown *or* Windows MSVC 2019. It is re-enabled
    # on native via the opt-in `tracy` feature on `lunco-modelica`
    # (see that crate's [features] section and target-cfg dependency).
    "serialize",                   # serde Serialize/Deserialize for Entity, Vec3, Quat, Handle, etc.
                                   # Enables `#[Command]` to always derive serde without per-field worry.
] }
lunco-assets = { path = "crates/lunco-assets" }
# NOTE: `debug-plugin` is deliberately OFF. It pulls bevy_gizmos → bevy_render →
# wgpu/naga/x11rb into every consumer, including the `--no-ui` server and the
# wasm worker — the same feature-unification trap as A1. Nothing in the tree
# constructs `PhysicsDebugPlugin` or `PhysicsGizmos`; re-enable it here (and only
# here) if collider debug-draw is ever wired up.
avian3d = { version = "0.7.0", default-features = false, features = ["3d", "f64", "parry-f64", "parallel", "default-collider", "collider-from-mesh", "bevy_diagnostic", "xpbd_joints"] }
# big_space bevy-0.19 support is not released yet; consume PR #73
# (aevyrie/big_space#73, "update to bevy 0.19") pinned to its head commit.
# TODO(deps): swap back to a crates.io release once one ships for bevy 0.19.
big_space = { git = "https://github.com/m-edlund/big_space", rev = "79e04cc01a84f3b8d199a0f97aaeb8245f203b16" }
leafwing-input-manager = "0.21.0"
# egui 0.35 row. bevy_egui 0.41 = egui 0.35. The whole egui ecosystem must
# agree on the egui minor or it dual-links. The only in-tree crate without an
# egui-0.35 *release* is transform-gizmo (bevy-0.19 + egui-0.35 exists on no
# single upstream ref), pinned to a LunCoSim fork branch in [patch.crates-io].
bevy_egui = { version = "0.41", features = ["serde"] }
# `mouse_interaction` (default) fires a gizmo drag on ANY left-press held over
# the gizmo, with no handle check. Selection here is Shift+left-click and the
# gizmo renders ON the selected object, so that driver made the selecting click
# immediately grab the gizmo. We drop it and drive drags ourselves, gated to
# plain (non-Shift) presses — see `gizmo::drive_gizmo_drag_no_shift`. Keep
# `gizmo_picking_backend` (hover/handle hit-testing).
transform-gizmo-bevy = { version = "0.9.0", default-features = false, features = ["gizmo_picking_backend"] }
chrono = "0.4.45"
futures-lite = "2.6"
resvg = "0.47"
tiny-skia = "0.12"
usvg = { version = "0.47", default-features = false }
# default-features off keeps the Lunica wasm worker lean (image's defaults
# pull ~a dozen codecs); we ship only what consumers declare — png (screenshot
# encode + MSL icons), jpeg (MSL icons), tiff. Add a feature here if a build
# surfaces a missing codec rather than re-enabling `default`.
image = { version = "0.25", default-features = false, features = ["tiff", "png", "jpeg"] }
smallvec = "1.13"
# openusd 0.5.0: real PCP composition engine (variantSets + relationship target
# translation) + typed usd::Stage API. Replaces our hand-rolled lunco-usd-composer.
# Pinned exact — pre-1.0, API moves fast. See crates/lunco-usd-bevy/OPENUSD_0_5_MIGRATION.md.
#
# Feature flags gate the TYPED SCHEMAS. We used to enable only `physics`, so the
# `geom` / `shade` / `lux` schema wrappers — and their token constants — were
# compiled out, and we hand-rolled attribute-name string literals against them
# (`"physics:dynamicFriction"`, `"inputs:intensity"`, `"material:binding"`, …).
# That is how we ended up inventing `physics:friction`, an attribute UsdPhysics
# does not define: nothing could catch the typo, because it was a `&str`.
# Enabling them makes those names compile-checked constants.
openusd = { version = "=0.5.0", features = ["physics", "geom", "shade", "lux"] }
instant = "0.1"
# Drop-in replacement for `std::time::Instant` / `SystemTime` that works on
# wasm32-unknown-unknown (where the std types panic at runtime). Backed by
# `performance.now()` in the browser, `std::time` on native. Used by Bevy
# itself, so already in our dep graph as a transitive — pin it explicitly so
# our own code can depend on it.
web-time = { version = "1", features = ["serde"] }
# getrandom 0.2 with js feature for wasm32 support (needed by rand, uuid, etc.)
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
lunco-api = { path = "crates/lunco-api" }
lunco-terrain-globe = { path = "crates/lunco-terrain-globe" }
lunco-terrain-core = { path = "crates/lunco-terrain-core" }
lunco-cosim = { path = "crates/lunco-cosim" }
lunco-environment = { path = "crates/lunco-environment" }
lunco-theme = { path = "crates/lunco-theme" }
lunco-web = { path = "crates/lunco-web" }

# Rumoca crates — single source-of-truth for the git URL + branch.
# Crates opt in via `rumoca-xxx = { workspace = true }`.
# Consumed from the `main` branch of LunCoSim/rumoca.
rumoca-ir-ast      = { git = "https://github.com/LunCoSim/rumoca", branch = "main" }
rumoca-phase-parse = { git = "https://github.com/LunCoSim/rumoca", branch = "main" }
rumoca-compile     = { git = "https://github.com/LunCoSim/rumoca", branch = "main" }
rumoca-sim         = { git = "https://github.com/LunCoSim/rumoca", branch = "main" }
rumoca-tool-fmt    = { git = "https://github.com/LunCoSim/rumoca", branch = "main" }
rumoca-tool-lint   = { git = "https://github.com/LunCoSim/rumoca", branch = "main" }

catppuccin-egui = "5.7.0"

# Centralised here so version drift across crates is visible in one
# place. Each crate opts in via `dep = { workspace = true }`.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# Pure-Rust embedded scripting engine. Chosen over Luau/mlua because mlua only
# reaches wasm via `wasm32-unknown-emscripten`; rhai compiles cleanly to
# `wasm32-unknown-unknown` (our wasm-bindgen target) with no C/C++ toolchain.
# Sandboxed (op/depth/size caps) and deterministic — fits the FixedUpdate sync
# path used by cosim + networking.
rhai = { version = "1", features = ["sync", "serde"] }
toml = "1.1"
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2.14", features = ["serde"] }
smol_str = { version = "0.3", features = ["serde"] }
crossbeam-channel = "0.5"
# Link-time distributed registry (life-before-main collection). Backs the
# asset-scheme registry: any crate `inventory::submit!`s its `AssetSchemeProvider`
# and the pre-AssetPlugin registrar drains them — no central hardcoded scheme
# list. wasm-safe (collected via wasm-bindgen module init).
inventory = "0.3"
egui_plot = "0.36.0"
rfd = "0.17"
tempfile = "3.27"
thiserror = "2.0"
async-trait = "0.1"
# Seeded, reproducible RNG for procedural generation. ChaCha8Rng seeded via
# `seed_from_u64` is deterministic across platforms and needs NO getrandom at
# runtime — so the obstacle-field generator produces identical fields on
# server + every client (networking replicates the spec, not the geometry) and
# is wasm-safe without an entropy backend.
rand = { version = "0.10", default-features = false, features = ["std"] }
rand_chacha = "0.10"

# ── wasm / browser-platform bindings ─────────────────────────────────
# Centralised so the wasm-bindgen/js-sys/web-sys family can't drift apart
# across the ~10 crates that touch the browser. web-sys features are
# additive: each crate opts into the JS APIs it needs via
# `web-sys = { workspace = true, features = ["…"] }`; Cargo unions them.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

# ── Misc shared third-party (centralised to kill version drift) ──────
# v3: TLS moved into the default `rustls` feature (the v2 `tls` flag is gone).
ureq = "3"
# NB: bincode 3.0.0 on crates.io is a non-functional troll release
# (`compile_error!("https://xkcd.com/2347/")`); 2.x is the real latest. The
# `serde` feature gives the `bincode::serde::{encode_to_vec,decode_from_slice}`
# compat shims we use with `config::standard()`.
bincode = { version = "2", features = ["serde"] }
tar = "0.4"
zstd = "0.13"
rayon = "1"
base64 = "0.22"
# Pure-Rust SHA-256 — works on native AND wasm32-unknown-unknown (no
# getrandom / no C). Used by lunco-assets (asset verify) and
# lunco-networking (scenario manifest revision digest + asset content
# addressing on both server and web client).
sha2 = "0.11"
# IPLD content-addressing (IPFS interop). `cid` builds/renders CIDs;
# `multihash-codetable` provides `Code::Sha2_256.digest(bytes)`. Both
# pure-Rust and wasm32-safe — the web client verifies asset hashes
# identically to native and the CIDs it pins are resolvable by `ipfs
# get`/`ipfs pin`. Wire form is canonical CID bytes (see
# lunco-networking/src/scenario.rs).
cid = { version = "0.11", default-features = false, features = ["alloc", "serde"] }
multihash-codetable = { version = "0.2", default-features = false, features = ["sha2"] }

# ── Bevy sub-crates — pinned to the exact `bevy` version above ────────
# These ship in lock-step with bevy; a skewed minor (e.g. bevy_reflect
# "0.19" resolving ahead of bevy "0.19.0") risks subtle ABI/derive
# breakage. Keep every entry == the `bevy` pin.
bevy_reflect = "0.19.0"
bevy_mesh = "0.19.0"
bevy_shader = "0.19.0"
bevy_asset = "0.19.0"
bevy_picking = "0.19.0"

# ── Lints (inherited via `[lints] workspace = true` per crate) ───────
# Encodes policy decisions:
# - Default `unused`/`dead_code` lints stay at warn (compiler default)
#   — we keep the workspace clean of them.
# - `unreachable_pub` and `missing_docs` raised to warn — both currently
#   at zero across the workspace; surfaces drift early.
# - Selected clippy lints we've already cleaned to zero are pinned at
#   warn so future code re-introducing them gets flagged.
# - `needless_pass_by_value` is silenced because Bevy SystemParams
#   (Res, Query, Commands, On, …) are framework-mandated by-value and
#   trip the lint en masse with no actionable signal. Audit on demand
#   with a grep filter; see prior session notes.
[workspace.lints.rust]
unreachable_pub = "warn"
# `missing_docs` stays at the compiler default (allow) workspace-wide;
# crates that want strict doc coverage opt in with `#![warn(missing_docs)]`
# in their `lib.rs` (currently: lunco-doc, lunco-doc-bevy, lunco-workbench,
# lunco-workspace, lunco-storage, lunco-twin). Forcing it on every crate
# would surface 1500+ warnings on the long-tail crates without value.
missing_docs = "allow"

[workspace.lints.clippy]
redundant_clone = "warn"
clone_on_copy = "warn"
or_fun_call = "warn"
needless_collect = "warn"
unnecessary_wraps = "warn"
needless_borrow = "warn"
manual_map = "warn"
manual_unwrap_or = "warn"
useless_conversion = "warn"
redundant_closure = "warn"
needless_pass_by_value = "allow"
# Asset I/O policy AND the GridAnchor atomic-re-parenting invariant.
# Domain crates may not bypass `AssetServer` with raw `std::fs` /
# `std::thread` / blocking `Instant` (those break wasm32 — the bug only
# shows in the browser, not in `cargo test`), and re-parenting of
# big_space `GridAnchor` entities must go through
# `lunco_core::attach::migrate_to_grid`. The full list of banned symbols
# (plus the local `#[allow]` escape-hatch policy) lives in `clippy.toml`
# at the workspace root. See `docs/architecture/40-asset-io.md` and
# `crates/lunco-core/src/attach.rs` for the rationale.
disallowed_methods = "deny"

# ── Dev profile ──────────────────────────────────────────────────────
# Bevy/avian/parry are unusably slow at opt-level 0. opt-level=1 on our
# own crates + opt-level=3 on deps recovers most of release-mode runtime
# speed for a one-time longer dep build (cached afterwards).
#
# debug + split-debuginfo: the default `debug = true` (full DWARF, level 2)
# is what makes native `target/debug` explode to 40G+ on a Bevy/avian stack
# (31G of it is deps rlibs; example binaries carry 2-4G of embedded debuginfo
# each). `line-tables-only` keeps file:line backtraces — all we use in
# practice — while dropping variable-level DWARF, cutting target/ by ~60%.
# `split-debuginfo = "unpacked"` keeps that debuginfo in side .dwo files
# instead of copying it into every dependent binary, so the per-example
# binaries shrink from GBs to MBs. Mirrors web-dev/profiling, which already
# use line-tables-only. sccache does NOT affect target/ size — only rebuild
# speed — so this profile change is the actual disk-fill fix.
[profile.dev]
opt-level = 1
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

# ── avian3d: debug-assertions OFF — TODO(avian-bump): WORKAROUND ─────
# TODO(avian-bump): this MASKS an upstream avian 0.7 bug; it does not fix it.
# Re-test on the next avian release and DELETE this block if the assert no longer
# fires. If it still fires, file it upstream (the repro + analysis are below).
#
# avian 0.7's solver-island bookkeeping has a DEBUG-ONLY assert that a scene
# teardown trips: `island.contact_count == 0` (islands/mod.rs:1372), fired from
# `BodyIslandNode::on_remove` when an island's last BODY leaves while a contact is
# still registered against it. It makes `LoadScene` over a live physics scene
# panic in dev — and only in dev; release already compiles the assert out.
#
# Not fixable from our side. Avian drains a collider's contacts ONLY on adding
# `ColliderDisabled`/`Disabled` or removing `ColliderMarker` (narrow_phase:155-156)
# — note that removing the `Collider` component does neither, since `ColliderMarker`
# is a REQUIRED component and survives it. And `remove_collider_on` early-returns on
# a non-TOUCHING edge WITHOUT unlinking it from the island. Every sanctioned teardown
# order was tried (remove RigidBody/Collider either way round; disable both; gather
# colliders through `RigidBodyColliders` rather than the Bevy hierarchy; even step
# `PhysicsSchedule` mid-teardown) and each still left islands holding contacts.
#
# The assert is over-strict rather than load-bearing: the island it fires on is
# deleted on the very next line (`remove_island`), so the stale count has no
# consumer, and the contacts are cleaned when the colliders themselves despawn.
#
# This MASKS an upstream avian bug; it does not fix it. Revisit on an avian bump.
# See memory: project_avian_island_contact_count_reload_crash
[profile.dev.package.avian3d]
opt-level = 3
debug-assertions = false

# ── Release profile (native, speed-first) ────────────────────────────
# Default `cargo build --release` targets native binaries. Wants runtime
# speed, not binary size. Earlier this profile was tuned for the wasm web
# build (`opt-level = "z"`, `lto = "fat"`, `codegen-units = 1`) which
# pessimised native — every native release ran with shrink-first codegen
# and the link took minutes due to fat LTO. The wasm tuning now lives in
# `[profile.web-release]` below; the wasm build scripts use that.
[profile.release]
opt-level = 3
lto = "thin"
strip = true

# Wasm web build: optimise for download/compile-in-browser size. Used by
# `scripts/build_web.sh` and `scripts/build_rover.sh` via `--profile
# web-release`. Output lands in `target/wasm32-unknown-unknown/web-release/`.
#
# - opt-level = "z": shrink-first (default "3" favours runtime speed).
#   Typical wasm gain: 5–15 %.
# - lto = "fat": cross-crate inlining + DCE across the whole workspace.
# - codegen-units = 1: whole-crate codegen, slightly smaller output.
[profile.web-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
# `panic = "abort"` drops the unwinding tables and panic-formatting
# machinery from the wasm. Typical gain: ~5–10 % on a release build.
# Safe on wasm — there's no host that catches panics; a panic
# terminates the module either way, we just skip the unwind metadata.
panic = "abort"

# Wasm web build, fast-iteration variant. Used by `scripts/build_web.sh
# build <bin> --dev` for inner-loop development — produces a larger
# wasm but compiles+links in a fraction of the time of `web-release`
# (no fat LTO, no shrink-first codegen, parallel codegen units). The
# build script also skips the `wasm-opt` post-pass when this profile
# is selected. Use `web-release` for what users actually load.
[profile.web-dev]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
strip = false
debug = "line-tables-only"
incremental = true

# Profile for samply / perf — release codegen with line-table debug info so
# stacks symbolicate to function names. Strip is off; otherwise identical to
# release. Build with `cargo run --profile profiling --bin ...`.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
