[package]
name = "nocturne-fileverse"
version = "1.7.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.21"
blake3 = "1.5"
bloomfilter = "1.0.12"
chacha20poly1305 = "0.10"
dashmap = "5.5"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
etcd-client = "0.11"
governor = { version = "0.6", features = ["std"] }
hex = "0.4"
ipfs-api-backend-hyper = "0.6.0"
lru = "0.12"
parking_lot = "0.12"
rand = "0.8"
rayon = "1.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
subtle = "2.5"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
mockito = "1.3"
tokio-test = "0.4"

[features]
default = []
fuzz = []
bench = []
