[package]
name = "nocturne_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
# aws-sdk-kms = "0.28.0" # This will be stubbed for now
blake3 = "1.3.3"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.0.0"
lru = "0.12.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["limit"] }
etcd-client = "0.11.0"
