[package]
name = "lunco-api"
version = "0.1.0-dev"
edition = "2021"
description = "Transport-agnostic API layer for LunCoSim — HTTP, ROS2, IPC, etc."

[features]
default = ["transport-http", "render"]
# Native HTTP server (axum + TcpListener). Opt-in so library consumers that
# only need the registry/schema types stay axum-free. Pulls tokio's full
# runtime/net — wasm-incompatible, so never enable this for wasm32 (the web
# build leaves it off; the wasm JS bridge needs no feature — see below).
transport-http = ["dep:axum", "dep:tokio", "tokio/full"]

# Screenshot / `CaptureScreenshot` support. Pulls bevy's render stack
# (`Screenshot` + `ScreenshotCaptured` live in `bevy_render`). A headless
# server leaves this off so the whole crate builds render-free — the
# `CaptureScreenshot` command then simply reports "command not found".
# On by default so GUI binaries get screenshots with no extra opt-in.
render = ["bevy/bevy_render", "bevy/bevy_core_pipeline", "bevy/bevy_window", "dep:image", "dep:web-time"]

# Windowed-app optimization: hook the winit event loop so an incoming HTTP
# request wakes the app immediately (vs. waiting for the next reactive tick).
# Needs `bevy::winit`. OFF for a headless `--no-ui` server — it has no event loop
# (ScheduleRunnerPlugin ticks continuously), so the waker is a no-op anyway.
# GUI binaries enable it via `lunco-client`'s `ui` feature.
winit = ["bevy/bevy_winit"]

# NOTE: there is no `transport-wasm` feature. On wasm32 the only usable
# transport is the `window.lunco_api` JS bridge (a browser can't bind TCP), so
# it compiles *automatically* under `cfg(target_arch = "wasm32")`. Its deps
# live in the wasm target table below — present on wasm, absent on native.

[dependencies]
lunco-core = { path = "../lunco-core" }
# Substrate-only by default; the `render` feature adds the bevy render stack
# the screenshot path needs (see `[features]` above). A headless server depends
# on this crate with `default-features = false` (or without `render`) to stay
# render-free.
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Screenshot-only deps — pulled in by the `render` feature. `image` encodes the
# captured frame; `web-time` is a wasm-safe `SystemTime` for the screenshot
# filename timestamp (std::time panics on wasm and trips the disallowed_methods
# lint).
image = { version = "0.25", optional = true }
web-time = { workspace = true, optional = true }

# Transport: HTTP (optional, native only). `tokio/full` is added by the
# `transport-http` feature; the base dep stays featureless.
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", default-features = false, optional = true }

# Wasm-only: the JS bridge (`window.lunco_api`) and its deps compile
# automatically on wasm32 — no feature gate. `tokio/sync` gives the bridge its
# runtime-agnostic channels without dragging in `net`/`rt` (which need mio and
# break on wasm).
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
base64 = "0.22"

[lints]
workspace = true
