[package]
name = "lunco-api"
version = "0.1.0-dev"
edition = "2021"
description = "Transport-agnostic API layer for LunCoSim — HTTP, ROS2, IPC, etc."

[features]
default = ["transport-http", "render"]
# Native HTTP server (axum + TcpListener). Opt-in so library consumers that
# only need the registry/schema types stay axum-free. Its deps (axum + tokio's
# `full` runtime) live in the non-wasm target table below, so they are ABSENT on
# wasm by construction — enabling this feature for a browser build pulls nothing
# wasm-incompatible (no tokio/net → no mio). The wasm JS bridge needs no feature.
transport-http = ["dep:axum", "dep:tokio"]

# Screenshot / `CaptureScreenshot` support. Pulls bevy's render stack
# (`Screenshot` + `ScreenshotCaptured` live in `bevy_render`). A headless
# server leaves this off so the whole crate builds render-free — the
# `CaptureScreenshot` command then simply reports "command not found".
# On by default so GUI binaries get screenshots with no extra opt-in.
render = ["bevy/bevy_render", "bevy/bevy_core_pipeline", "bevy/bevy_window", "dep:image", "dep:web-time"]

# Windowed-app optimization: hook the winit event loop so an incoming HTTP
# request wakes the app immediately (vs. waiting for the next reactive tick).
# Needs `bevy::winit`. OFF for a headless `--no-ui` server — it has no event loop
# (ScheduleRunnerPlugin ticks continuously), so the waker is a no-op anyway.
# GUI binaries enable it via `lunco-sandbox`'s `ui` feature.
winit = ["bevy/bevy_winit"]

# NOTE: there is no `transport-wasm` feature. On wasm32 the only usable
# transport is the `window.lunco_api` JS bridge (a browser can't bind TCP), so
# it compiles *automatically* under `cfg(target_arch = "wasm32")`. Its deps
# live in the wasm target table below — present on wasm, absent on native.

[dependencies]
lunco-core = { path = "../lunco-core" }
lunco-fsw = { path = "../lunco-fsw" }
# Substrate-only by default; the `render` feature adds the bevy render stack
# the screenshot path needs (see `[features]` above). A headless server depends
# on this crate with `default-features = false` (or without `render`) to stay
# render-free.
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Screenshot-only deps — pulled in by the `render` feature. `image` encodes the
# captured frame; `web-time` is a wasm-safe `SystemTime` for the screenshot
# filename timestamp (std::time panics on wasm and trips the disallowed_methods
# lint).
image = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }

# Native-only HTTP server transport (optional, pulled by `transport-http`). axum
# + tokio's `full` runtime live in THIS non-wasm table — and crucially `full` is
# set on the dependency here, NOT via a `tokio/full` line in the feature. A
# feature string unifies across targets (that was the old bug: `tokio/full`
# turned on `net` → mio on wasm); a non-wasm dependency's own features cannot.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", default-features = false, features = ["full"], optional = true }

# Wasm-only: the JS bridge (`window.lunco_api`) deps. tokio here carries ONLY
# `sync` — the bridge's runtime-agnostic channels — with no `net`/`rt` (which
# need mio and break on wasm). Non-optional: any wasm build is a bridge build.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
