[package]
name = "lunco-api"
version = "0.1.0-dev"
edition = "2021"
license.workspace = true
description = "Transport-agnostic API layer for LunCoSim — HTTP, ROS2, IPC, etc."

[features]
# THERE IS NO `render` FEATURE ANY MORE — and that is the point.
#
# It existed only for `CaptureScreenshot` (`Screenshot` / `ScreenshotCaptured` live in
# bevy_render). It was ON BY DEFAULT, so staying render-free was the *non-default* path and
# every consumer had to remember `default-features = false`. Three forgot — `lunco-doc-bevy`,
# `lunco-celestial`/`lunco-tutorial`, `lunco-telemetry` — and each silently re-linked wgpu
# into the `--no-ui` server. Feature unification makes that invisible to code review; only
# `cargo tree` sees it.
#
# A feature you can forget is a trap that fires forever, so the GPU half now lives in
# `lunco-workbench::screenshot` and this crate CANNOT link a renderer, by construction. What
# here is a pure-data contract (`PendingScreenshotRequest` + `ScreenshotRequested`).
default = ["transport-http"]
# Native HTTP server (axum + TcpListener). Opt-in so library consumers that
# only need the registry/schema types stay axum-free. Its deps (axum + tokio's
# `full` runtime) live in the non-wasm target table below, so they are ABSENT on
# wasm by construction — enabling this feature for a browser build pulls nothing
# wasm-incompatible (no tokio/net → no mio). The wasm JS bridge needs no feature.
transport-http = ["dep:axum", "dep:tokio"]

# Windowed-app optimization: hook the winit event loop so an incoming HTTP
# request wakes the app immediately (vs. waiting for the next reactive tick).
# Needs `bevy::winit`. OFF for a headless `--no-ui` server — it has no event loop
# (ScheduleRunnerPlugin ticks continuously), so the waker is a no-op anyway.
# GUI binaries enable it via `lunco-sandbox`'s `ui` feature.
winit = ["bevy/bevy_winit"]

# NOTE: there is no `transport-wasm` feature. On wasm32 the only usable
# transport is the `window.lunco_api` JS bridge (a browser can't bind TCP), so
# it compiles *automatically* under `cfg(target_arch = "wasm32")`. Its deps
# live in the wasm target table below — present on wasm, absent on native.

[dependencies]
lunco-core = { path = "../lunco-core" }
# SUBSTRATE ONLY — no bevy_render, no way to opt in. The screenshot's GPU half lives in
# `lunco-workbench::screenshot`; see the note above `default`.
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Native-only HTTP server transport (optional, pulled by `transport-http`). axum
# + tokio's `full` runtime live in THIS non-wasm table — and crucially `full` is
# set on the dependency here, NOT via a `tokio/full` line in the feature. A
# feature string unifies across targets (that was the old bug: `tokio/full`
# turned on `net` → mio on wasm); a non-wasm dependency's own features cannot.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", default-features = false, features = ["full"], optional = true }

# Wasm-only: the JS bridge (`window.lunco_api`) deps. tokio here carries ONLY
# `sync` — the bridge's runtime-agnostic channels — with no `net`/`rt` (which
# need mio and break on wasm). Non-optional: any wasm build is a bridge build.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
