[package]
name = "lunco-assets"
version = "0.1.0"
edition = "2021"
description = "Unified asset management for LunCoSim — cache resolution, versioned downloads, texture processing, and loading abstraction"

[dependencies]
# `bevy_asset` is required here directly: this crate defines the `twin://` /
# `lunco://` AssetReaders (twin_source.rs uses `bevy::asset::io::*`). The
# workspace bevy default is substrate-only (no render/asset) since the render
# gating, so declare the feature here rather than relying on a consumer to
# unify it in — otherwise the standalone `build_msl_assets` host bin fails to
# compile (E0433: `bevy::asset` not found).
bevy = { workspace = true, features = ["bevy_asset"] }
# The `scenario://` AssetReader routes byte reads through the storage backend
# (native `FileStorage`, web `OpfsStorage`) rather than raw `std::fs`, so it
# serves downloaded scenario assets uniformly on both platforms.
lunco-storage = { path = "../lunco-storage" }
# Backs the asset-scheme registry — crates contribute schemes via
# `inventory::submit!`, drained by `register_lunco_asset_sources`.
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
# Compile-time embed of authored asset subtrees that must be present on EVERY
# target (wasm has no filesystem). Used by `scripting.rs` to bake
# `assets/scripting/` in. All-targets: `include_dir!` is fs-free at runtime.
include_dir = "0.7"
# Cross-platform user-home / config-dir resolution for `user_config_dir()`.
# Native-only — the wasm path uses OPFS / IndexedDB instead and skips
# this helper entirely.
dirs = "5"

# Native-only helper binary that packs MSL into a versioned, compressed
# bundle for the web build. Path-gated to keep wasm32 builds away from it.
[[bin]]
name = "build_msl_assets"
path = "src/bin/build_msl_assets.rs"

# Desktop-only: HTTP client for asset downloads, tarball extraction, hashing
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { workspace = true }
sha2 = { workspace = true }
# `which` is used by the glb process step to verify that `npx`
# (Node.js) is on PATH before shelling out to gltf-transform. Native
# only — the wasm path doesn't run process steps.
which = "6"
flate2 = "1.0"
bzip2 = "0.4"
tar = { workspace = true }
# zstd compressor for the MSL asset bundle the build_msl_assets binary
# emits into `dist/<bin>/msl/`. Web runtime uses a pure-Rust decoder
# (ruzstd) — see lunco-modelica's wasm32 deps.
zstd = { workspace = true }
# `build_msl_assets` parses every MSL .mo file and ships a bincode'd
# `Vec<(String, StoredDefinition)>` next to the source bundle so the
# wasm runtime can skip the per-file parse (which is ~600 ms/file in
# release wasm — unworkable for 2670 files).
rumoca-phase-parse = { workspace = true }
rumoca-ir-ast = { workspace = true }
bincode = { workspace = true }
# Parallelises the ~2670-file MSL pre-parse across all cores. Native-only
# (this binary never compiles to wasm), so the unbounded default pool is
# fine — unlike the runtime, which caps rayon to keep cores free for render.
rayon = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
usvg = { workspace = true }

# Wasm-only: fetch bundled TTF fonts over HTTP at runtime (served at
# `/fonts/…` by the page bundle — see the copy step in
# `scripts/build_web.sh`). Native reads the same file from the cache dir.
# Also backs `web_fetch` — the generic browser fetch + Cache-Storage +
# tar.zst-unpack primitives shared by every bundle distributor (MSL,
# twin bundles), extracted here from lunco-modelica's MSL fetcher.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Cache",
    "CacheStorage",
    "Headers",
] }
# Pure-Rust zstd decoder + tar reader for `web_fetch::unpack_tar_zst`
# (the web runtime has no `zstd`/filesystem). Native bundle packing uses
# the C `zstd` crate above; the browser decodes with these.
ruzstd = "0.7"
tar = { workspace = true }

[lints]
workspace = true
